change background of the circle and add two buttoms

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </nav>
 
         <div class = "information">
+            <div class="overlay"></div>
+            <img src="images/mobile.png" class="mobile">
             <div id = "circle">
                 <div class = "feature one">
                     <img src = "">
@@ -52,6 +54,35 @@
                 </div>
             </div>
         </div>
+
+        <div class="controls">
+            <img src="images/arrow.png" id="upBtn">
+            <h3>Features</h3>
+            <img src="images/arrow.png" id="downBtn">
+        </div> 
     </div>
+
+    <script>
+        var circle = document.getElementById("circle");
+        var upBtn = document.getElementById("upBtn");
+        var downBtn = document.getElementById("downBtn"); 
+
+        var rotatevalue = circle.style.transform;
+        var rotateSum;
+
+        upBtn.onclick = function()
+        {
+            rotateSum = rotatevalue + "rotate(-90deg)";
+            circle.style.transform = rotateSum
+            rotatevalue = rotateSum;
+        }
+
+        downBtn.onclick = function()
+        {
+            rotateSum = rotatevalue + "rotate(90deg)";
+            circle.style.transform = rotateSum;
+            rotatevalue = rotateSum;
+        }
+    </script>
 </body>
 </html>>
