upload new pictures

--- a/index.html
+++ b/index.html
@@ -12,44 +12,40 @@
             </div>
             <div class = "nav-links">
                 <ul>
-                    <li><a href = "#">Home</a></li>
-                    <li><a href = "#">Phone</a></li>
-                    <li><a href = "#">Accessories</a></li>
-                    <li><a href = "#">Cart</a></li>
+                    <li><a href = "#">Education</a></li>
+                    <li><a href = "#">Projects</a></li>
+                    <li><a href = "#">Background</a></li>
+                    <li><a href = "#">Link</a></li>
                 </ul>
             </div>
         </nav>
 
         <div class = "information">
             <div class="overlay"></div>
-            <img src="images/mobile.png" class="mobile">
+            <img src="images/computer.png" class="mobile">
             <div id = "circle">
                 <div class = "feature one">
-                    <img src = "">
                     <div>
-                        <h1>Camera</h1>
-                        <p>Snapdragon Octa-core 11nm</p>
+                        <h1>Skills</h1>
+                        <p>C++ Python</p>
                     </div>
                 </div>
                 <div class = "feature two">
-                    <img src = "">
                     <div>
-                        <h1>Camera</h1>
-                        <p>Snapdragon Octa-core 11nm</p>
+                        <h1>Unity</h1>
+                        <p>Game Development</p>
                     </div>
                 </div>
                 <div class = "feature three">
-                    <img src = "">
                     <div>
-                        <h1>Camera</h1>
-                        <p>Snapdragon Octa-core 11nm</p>
+                        <h1>Language</h1>
+                        <p>Mandarin English Korean</p>
                     </div>
                 </div>
                 <div class = "feature four">
-                    <img src = "">
                     <div>
-                        <h1>Camera</h1>
-                        <p>Snapdragon Octa-core 11nm</p>
+                        <h1>UCI</h1>
+                        <p>Master of Computer Science</p>
                     </div>
                 </div>
             </div>
